Update to Java 21, refactored protocol + more
- Java 21 + gradle, experiment with virtual threads.
- Updated the protocol and naming scheme
- Updated packets and their functions
- Updated server side entity logic
- Added some new packets
- Removed redundant typing